Fix clipped stop sign emoji; Fix scale/parse issue

--- a/frontend/static/css/yourworld.css
+++ b/frontend/static/css/yourworld.css
@@ -505,7 +505,7 @@ a:visited {
 }
 .chat_emote {
 	background: url(/static/emotes.png);
-	background-size: auto 100%;
+	background-size: auto 400%;
 	height: 16px;
 	vertical-align: middle;
 	display: inline-block;
